# kdm5.prev

./: CMakeLists.txt  README
doc/: CMakeLists.txt
kdm/kcm/: positioner.cpp  positioner.h
kdm/kcm/background/: bgdialog.cpp  bgmonitor.cpp
libs/: CMakeLists.txt
